--- a/index.html
+++ b/index.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html>
+
+<style>
+body {
+	font-family: monospace;
+}
+</style>
+
 <head>
 	<title>test</title>
 </head>
+
 <body>
-<p>hello world</p>
+	<p>Testing Boat server controls</p>
 
-<button onclick="servo()">servo</button>
+	<!-- <button onclick="servo()">servo</button> -->
 
-<br>
+	<br>
 
-<input id="slide" type="range" min="0" max="180" step="1" value="90">
-<div id="sliderAmount"></div>
+	<input id="slide" type="range" min="0" max="180" step="1" value="90">
+	<div id="sliderAmount"></div>
 
-<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-<script src="/socket.io/socket.io.js"></script>    
+	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
 
-<script>  
+	<script>
+		var socket = io.connect('http://localhost:3000');
+		socket.on('connect', function(data) {
+			socket.emit('join', 'client connected');
+		});
 
+		// get slider values
+		var slide = document.getElementById('slide'),
+			sliderDiv = document.getElementById("sliderAmount");
 
-    var socket = io.connect('http://localhost:3000');
-    socket.on('connect', function(data) {
-        socket.emit('join', 'client connected');
-    });
-
-    // get slider values
-    var slide = document.getElementById('slide'),
-    sliderDiv = document.getElementById("sliderAmount");
-
-	slide.onchange = function() {
-	    sliderDiv.innerHTML = this.value;
-	    socket.emit('servo', this.value);
-	}
-
-</script>    
+		slide.onchange = function() {
+			sliderDiv.innerHTML = this.value;
+			socket.emit('servo', this.value);
+		}
+	</script>
 
 </body>
+
 </html>
